<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:ignore="ContentDescription, SpUsage, UseCompoundDrawables">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pill_layout"
        android:layout_marginHorizontal="32dp"
        android:paddingHorizontal="8dp"
        android:orientation="vertical"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:textSize="22dp"
            android:fontFamily="@font/klasik_regular"
            android:text="Welcome to Staft."/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/manrope_light"
            android:layout_height="wrap_content"
            android:text="Probably the fastest chat app in the whole world!"/>

        <LinearLayout
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/icon.avatar"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:background="@drawable/pill_white"
                android:layout_gravity="center"
                android:src="@drawable/enum_avatar_bird"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/selectAvatar" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout.name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@drawable/pill_white"
            android:padding="8dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:autofillHints="name"
                android:background="@android:color/transparent"
                android:hint="@string/your_name"
                android:inputType="text|textPersonName|textCapWords"
                android:lines="1"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon.name"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon.name"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout.email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@drawable/pill_white"
            android:padding="8dp">

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:autofillHints="emailAddress"
                android:background="@android:color/transparent"
                android:hint="@string/your_email"
                android:inputType="text|textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout.password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@drawable/pill_white"
            android:padding="8dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:autofillHints="password"
                android:background="@android:color/transparent"
                android:hint="@string/your_password"
                android:inputType="text|textPassword"
                android:lines="1"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon.password"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon.password"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="31dp"
            android:background="@drawable/rounded_header"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            app:drawableStartCompat="@drawable/ic_back" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>